# PDF-extraction

./: .gitignore  Claude.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
eval/: ground_truth.json
schemas/: contract_schema.json  default_schema.json  id_form_schema.json  invoice_schema.json  test_schema.json
scripts/: generate_sample_pdfs.py
src/doc_extract/: api.py  cli.py  config.py  models.py  pipeline.py
src/doc_extract/eval/: metrics.py  runner.py
src/doc_extract/inference/: groq_client.py  vllm_client.py
src/doc_extract/pdf/: inspect.py  ocr.py  render.py  text_extract.py
src/doc_extract/postprocess/: validation.py
src/doc_extract/prompts/: builder.py
tests/: test_builder.py  test_inspect.py  test_pipeline.py  test_validation.py
